<resources>
    <string name="app_name">DoctorApp</string>
    <string name="doctorView">Doctor Profile</string>
    <string name="editBtn">EDIT</string>
    <string name="deleteBtn">DELETE</string>
    <string name="remindBtn">REMINDERS</string>
    <string name="docNameView">Doctor Name</string>
    <string name="docGenderView">Gender</string>
    <string name="docPhoneView">Contact No</string>
    <string name="docEmailView">Email</string>
    <string name="docBirthView">Date of Birth</string>
    <string name="docAddressView">Address</string>
    <string name="docPassView">Password</string>
    <string name="patNameView">Patient Name</string>
    <string name="patGenderView">Gender</string>
    <string name="patPhoneView">Contact No</string>
    <string name="patEmailView">Email</string>
    <string name="patBirthView">Date of Birth</string>
    <string name="patAddressView">Address</string>
    <string name="patPassView">Password</string>
    <string name="saveBtn">Save Changes</string>
    <string name="doctorView1">Edit Doctor Profile</string>
    <string name="patientView">Patient Profile</string>
    <string name="patientView1">Edit  Patient Profile</string>
    <string name="editPatientName">Patient Name</string>
    <string name="createProfile">Create Profile</string>
    <string name="CreateBtn">Create</string>
    <string name="remText">REMINDER</string>
    <string name="viewPatient">Password</string>
    <string name="addressPatient">Address</string>

    //kalana
    <string name="Cname">Clinic Name :</string>
    <string name="Subject">Subject :</string>
    <string name="Create">Create Clinic</string>
    <string name="Sub">Doctor Name:</string>
    <string name="tN">Hospital :</string>
    <string name="dt">Date and Time:</string>
    <string name="des">Description :</string>
    <string name="top">Create Clinic</string>
    <string name="Save">Save Changes</string>
    <string name="Class1"> Clinic 01</string>
    <string name="hosp">SafeCare Lanka</string>
    <string name="doctorInsert">Dr.Nirmal Gunawardana</string>
    <string name="Dtime">21/03/2021  16.15.00</string>
    <string name="Des">This is the selfCare Lanka Hospital</string>
    <string name="nav2">Edit Clinic</string>
    <string name="Get">Get Invitation ID</string>
    <string name="Delete">Delete</string>
    <string name="Cview">Clinic View</string>
    <string name="Edit">Edit</string>
    <string name="dtt">Date and Time</string>
    <string name="searchBar">Search</string>
    <string name="textClinicName">Clinic 01</string>
    <!--    <string name="editBtn">EDIT</string>-->
    <string name="delete"></string>
    <string name="patView1">PATIENT 01</string>
    <string name="patientview1">PATIENT 01</string>
    <string name="patientview2">PATIENT 02</string>
    <string name="patientview3">PATIENT 03</string>
    <string name="ptRemove1" />
    <string name="accountbtn" />
    <string name="banner">Join Clinic</string>
    <string name="joinButton">JOIN</string>
    <string name="enter_password">Enter Password</string>
    <string name="clinicId">Enter Clinic ID</string>
    <string name="searchBar1">Search........</string>
    <string name="searchbtn">SEARCH</string>
    <string name="logo" />
    <string name="profilebtn" />
    <string name="patientRemove" />
    <string name="menuBtn" />
    <string name="fragmentBtn" />
    <string name="hospp" />
    <string name="inputClinicId">Enter Clinic ID:</string>
    <string name="inputPwd">Enter Password:</string>
    <string name="patientBtn">Patient</string>
    <string name="noticesBtn">NOTICES</string>
    <string name="clinicBtn">Clinics</string>
    <string name="notesBtn">Notes</string>
    <string name="clinicName">Clinic Name</string>
    <string name="doctorName">Doctor Name :</string>
    <string name="hosName">Hospital :</string>
    <string name="dtTime"><![CDATA[Date & Time :]]></string>
    <string name="joinBtn1">Join Clinic</string>

    //Charith
    <string name="view">background</string>
    <string name="btnCreate">Create Note</string>
    <string name="myclinic">My Clinic</string>
    <string name="view2">View Note</string>
    <string name="btnCreateNow">Create</string>
    <string name="viewCreateNote">Create Note</string>
    <string name="txtName1">Note Name :</string>
    <string name="txtArea">Description :</string>
    <string name="btnsave">Save</string>
    <string name="nEdit">Edit Note</string>
    <string name="btnSaveChange">Save</string>
    <string name="txtSearch">Search</string>
    <string name="btnCreateClinic">Create Clinic</string>
    <string name="btnPjoin">Join Clinic</string>
    <string name="btnShowData">View Notes</string>
    <string name="btnUpdate">Update</string>
    <string name="btnview">Clinic</string>
    <string name="btnView">Notes</string>

    //Ravindu
    <string name="clinicview">Patient</string>
    <string name="noticeview">Notices</string>
    <string name="textNoticename">Create Notices</string>
    <string name="txtNoticesView">Notices View</string>
    <string name="txtEditNotice">Edit Notice</string>


</resources>